<resources>
    <string name="app_name">Ordr</string>
    <string name="restaurants_loading_text">Looking for restaurants nearby…</string>
    <string name="profile_text">Profile</string>
    <string name="explored_nav_text">Explored</string>
    <string name="payments_nav_text">Payments</string>
    <string name="settings_nav_text">Settings</string>
    <string name="distance_metres">%.2f m</string>
    <string name="distance_kilometres">%.1f km</string>
    <string name="restaurant_image_description">Picture of the restaurant</string>
    <string name="restaurant_check_in">Check In</string>
    <string name="restaurant_reserve">Reserve</string>
    <string name="restaurant_address_icon">Address Icon</string>
    <string name="restaurant_open_menu">Open Full Menu</string>
    <string name="check_in_now">Check in Now</string>
    <string name="at_this_restaurant">At this restaurant?</string>
</resources>
